# qwen3-tts

./: .gitignore  README.md  example_jobs.csv  pyproject.toml
q3tts/: _utils.py  batch.py  clone.py  setup.py  tts.py
